Drafting @Library support and basic test loading