@@ -106,6 +106,17 @@ http://stackoverflow.com/questions/999489/invalid-signature-file-when-attempting
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.4</version>
+        <configuration>
+          <argLine>
+            --enable-native-access=ALL-UNNAMED
+            -Djava.library.path=${project.build.directory}/native-test
+          </argLine>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
